Bugfix: wrap non-standard MS css in double quotes to prevent invalid : css errors

--- a/modules/toolbar/toolbar.css
+++ b/modules/toolbar/toolbar.css
@@ -42,7 +42,7 @@ body.toolbar-drawer {
   -moz-box-shadow: 0 3px 20px #000;
   -webkit-box-shadow: 0 3px 20px #000;
   box-shadow: 0 3px 20px #000;
-  filter: progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10');
+  filter: "progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10')";
   -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10')";
   z-index: 600;
 }
